# Easy-Spellchecker

./: .gitignore  LICENSE  README.md  application.py  build-windows.bat  launcher.py  pyproject.toml  requirements.txt
ES/: EasySpellchecker.py
ES/Functions/: notifier.py  spellcheck.py
ES/GUI/: MainScreen.py  SecondaryScreen.py
src/easyspell/: __init__.py  app.py  config.py  core_app.py  hotkeys.py  logging_utils.py  notifications.py  spellchecker.py  tray_service.py
src/easyspell/gui/: __init__.py  main_frame.py
tests/: test_hotkeys.py  test_spellchecker.py
